media/css/zamboni/zamboni.css
/* ... */
#user-profile input[type="text"] {
    width: 90%;
    max-width: 310px;
}

#user-profile .profile-photo {
    width: 220px;
    position: absolute;
    right: 10%;
    top: 0;
    margin-left: 55%;
}

.html-rtl #user-profile .profile-photo {
    left: 10%;
    right: auto;
    margin-left: 0;
    margin-right: 55%;
}

#user-profile .profile-photo label {
    width: auto;
}

#user-profile .avatar {
    border: 3px solid #c8e8f3;
    padding: 0;
    margin-top: 1em;
}

#user-profile .trans {
    width: 96%;
}

.html-rtl #user-edit #acct-notify {
    padding: 0 0 0 35%;
}

#user-edit #acct-delete {
    margin: .25em 0;
    float: right;
}

.html-rtl #user-edit #acct-delete {
    float: left;
}

#acct-delete a {
    color: #c00;
}

/** =User =Profile *********/
.object-lead table {
    margin: 0 0 1em;
}

.object-lead table tr th {
    width: 160px;
}

.object-content .prose {
    margin: 0 0 1em;
}

.object-content .editprofile {
    border-top: 1px dotted #a5c9d5;
    margin: .25em 0 0;
    padding-top: .25em;
}

.object-content .editprofile a {
    background: transparent url("../../img/amo2009/icons/news-feed-sprite.png") 0 -538px no-repeat;
    font-weight: bold;
    font-size: .923em;
    margin-right: 1em;
    padding: .25em 0 .25em 22px;
}

.html-rtl .object-content .editprofile a {
    background-position: 100% -538px;
    padding: .25em 22px .25em 0;
    margin-right: 0;
    margin-left: 1em;
}

/** =Category Landing *********/
.category-landing [role="main"] {
    width: 73.47%;
}

.personas .persona-inner,
.category-landing .persona-inner {
    margin: 0 auto;
}

#featured-addons {
    width: auto;
}

#featured-addons ul {
    overflow: hidden;
    width: 96.7%;
    padding-left: 3.3%;
}

#featured-addons li.addon {
    width: 30%;
    padding: 0;
    margin: 0 3.33% 0 0;
    overflow: visible;
    float: left;
}

#featured-addons ul li.addon:last-child {
    margin-right: 0;
}

#featured-addons .featured-inner {
    padding: 10px;
    background: #fff;
    background: -moz-linear-gradient(#fff, #e4f5fb);
}

#featured-addons h3 {
    margin-top: 0;
}

#featured-addons h3 a {
    color: inherit;
}

.html-rtl #featured-addons li.addon {
    float: right;
    clear: none;
    margin: 0 0 0 3.33%
}

#featured-addons .addon:last-child {
    margin-right: 0;
}

.html-rtl #featured-addons .addon:last-child {
    margin-left: 0;
    margin-right: 3.33%;
}

#featured-addons .preview {
    margin-bottom: .5em;
    position: relative;
    left: -3px;
    overflow: hidden;
}

.html-rtl #featured-addons .preview {
    left: 3px;
    right: -3px;
}

#featured-addons .preview a {
    border: 3px solid #c8e8f3;
    display: block;
    max-width: 200px;
    height: 155px;
    overflow: hidden;
}

#featured-addons .preview a:hover,
#featured-addons .preview a:focus,
#featured-addons .preview a:active {
    border-color: #aedff3;
}

#featured-addons .addon-desc {
    margin-bottom: .75em;
    text-overflow: ellipsis;
    min-height: 5em;
}

#featured-addons .addon-rating {
    clear: both;
    float: left;
    margin-bottom: 1em;
}

.html-rtl #featured-addons .addon-rating {
    clear: both;
    float: right;
    margin-bottom: 1em;
}

#featured-addons .item .install {
    float: left;
    clear: both;
    margin: .5em 0;
}

.html-rtl #featured-addons .item .install {
    float: right;
}

.category-landing .addons-column {
    float: left;
    padding: 0 2% 0 0;
    width: 32%;
    border: 0;
}

.html-rtl .category-landing .addons-column {
    float: right;
    padding: 0 0 2% 0;
}

.category-landing .addons-column:last-child {
    padding-right: 0;
}

.html-rtl .category-landing .addons-column:last-child {
    padding-right: 2%;
    padding-left: 0;
}

.category-landing .addons-column h3 {
    background: transparent none;
    color: inherit;
    font-family: georgia, serif;
    margin: 0 2px .5em;
}

.category-landing .addons-column h3 a:link,
.category-landing .addons-column h3 a:visited {
    color: inherit;
}

.category-landing .addons-column h3 a:hover,
.category-landing .addons-column h3 a:focus,
.category-landing .addons-column h3 a:active {
    color: inherit;
    text-decoration: underline;
}

.category-landing .addons-column ul {
    border: 1px solid #b5d9e5;
    -moz-border-radius: 5px;
    padding: 0;
    margin: 0;
}

.category-landing .addons-column ul.personas {
    padding: .5em 5px 1.2em;
}

.category-landing .addons-column ul li {
    border-top: 1px dotted #b5d9e5;
    overflow: hidden;
    padding: 0;
    position: relative;
}

.category-landing .addons-column ul.personas li {
    background-color: inherit;
    padding: .6em 0 0;
    border: 0;
}

.html-rtl.category-landing .addons-column ul li {
    overflow: auto;
}

.category-landing .addons-column ul li a {
    min-height: 50px;
    height: auto;
    display: block;
    position: relative;
    text-decoration: none;
    padding: 0 5px 0 50px;
}

.html-rtl.category-landing .addons-column ul li a {
    padding: 0 50px 0 5px;
}

.category-landing .addons-column ul li a:hover,
.category-landing .addons-column ul li a:focus {
    background-color: #e4f5fb;
}

.category-landing .addons-column ul li a .name {
    font-size: 1em;
    font-weight: bold;
    color: #05e;
    padding: 8px 0 0;
    margin-left: 0;
    display: block;
    height: 1.25em;
    line-height: 1.25em;
    overflow: hidden;
    text-overflow: ellipsis;
}

.category-landing .addons-column ul li a:hover .name,
.category-landing .addons-column ul li a:focus .name,
.category-landing .addons-column ul li a:active .name {
    color: #003595;
    text-decoration: underline;
}

.category-landing .addons-column ul li a .meta {
    margin-left: 0;
    position: static;
    color: #777;
    display: block;
    font-size: 93%;
}

.category-landing .addons-column ul li a img.icon {
    left: 5px;
    top: 6px;
    position: absolute;
}

.html-rtl.category-landing .addons-column ul li a img.icon {
    left: auto;
    right: 5px;
}
/* ... */

